# video-chapter-splitter

./: .gitignore  README.md  pyproject.toml  setup.py  test_chapters.txt  test_concat.sh
examples/: sample_chapters.txt
src/: __init__.py  utils.py  video_chapter_splitter.py
tests/: test_utils.py
